move electrical profile endpoints from api to editoast
