# api/osrd_infra/views/__init__.py
@@ -1,7 +1,6 @@
 from osrd_infra.views.health import *  # noqa
 from osrd_infra.views.infra import *  # noqa
 from osrd_infra.views.pathfinding import *  # noqa
-from osrd_infra.views.electrical_profiles import *  # noqa
 from osrd_infra.views.rolling_stock import *  # noqa
 from osrd_infra.views.timetable import *  # noqa
 from osrd_infra.views.version import *  # noqa
