# editoast/src/views/mod.rs
@@ -1,5 +1,6 @@
 mod infra;
 mod layers;
+mod electrical_profiles;
 use rocket::serde::json::Value as JsonValue;
 use rocket_db_pools::deadpool_redis;
 pub mod pagination;
@@ -17,6 +18,7 @@ pub fn routes() -> HashMap<&'static str, Vec<Route>> {
         ("/", routes![health, version, opt::all_options]),
         ("/infra", infra::routes()),
         ("/layers", layers::routes()),
+        ("/electrical_profile_set", electrical_profiles::routes()),
     ])
 }
 
